# Ember

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/ember-cli/: Cargo.toml  README.md
crates/ember-cli/src/: cli.rs  main.rs
crates/ember-cli/src/commands/: build.rs  common.rs  dev.rs  mod.rs  new_cmd.rs  openapi.rs
crates/ember-cli/src/scaffold/: entity.rs  mod.rs  templates.rs
crates/ember-core/: Cargo.toml  README.md
crates/ember-core/src/: lib.rs
crates/ember-extensions/ember-ext-auth/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-auth/src/: lib.rs
crates/ember-extensions/ember-ext-config/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-config/src/: lib.rs
crates/ember-extensions/ember-ext-db/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-db/src/: config.rs  context.rs  lib.rs  optional.rs  pool.rs  query.rs  repository.rs
crates/ember-extensions/ember-ext-exceptions/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-exceptions/src/: lib.rs
crates/ember-extensions/ember-ext-health/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-health/src/: lib.rs
crates/ember-extensions/ember-ext-http/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-http/src/: lib.rs
crates/ember-extensions/ember-ext-metrics/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-metrics/src/: lib.rs
crates/ember-extensions/ember-ext-mq/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-mq/src/: lib.rs
crates/ember-extensions/ember-ext-openapi/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-openapi/src/: lib.rs
crates/ember-extensions/ember-ext-runtime/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-runtime/src/: lib.rs
crates/ember-extensions/ember-ext-tracing/: Cargo.toml  README.md
crates/ember-extensions/ember-ext-tracing/src/: lib.rs
crates/ember-extensions/ember-logging/: Cargo.toml  README.md
crates/ember-extensions/ember-logging/src/: lib.rs
crates/ember-extensions/ember-macros/: Cargo.toml  README.md
crates/ember-extensions/ember-macros/src/: lib.rs
docs/: architecture.md  roadmap.md
docs/adr/: 0001-framework-direction.md  0002-observability-standard.md  0003-config-precedence.md  0004-extension-lifecycle.md  0005-openapi-generation-scope.md
examples/bookstore/: Cargo.toml  Dockerfile.postgres  README.md  application.yaml
examples/bookstore/src/: config.rs  main.rs
examples/bookstore/src/controllers/: book_controller.rs  dto.rs  mod.rs
examples/bookstore/src/domain/: book.rs
examples/bookstore/src/mappers/: controller_mapper.rs  mod.rs  repository_mapper.rs
examples/bookstore/src/repository/entities/: book_entity.rs
examples/bookstore/src/repository/repositories/: book_repository.rs
examples/bookstore/src/services/: auth_service.rs  book_repository.rs  book_service.rs  mod.rs
examples/ember-example-service/: Cargo.toml  README.md
examples/ember-example-service/src/: config.rs  main.rs
examples/ember-example-service/src/controllers/: health_controller.rs
examples/ember-example-service/src/services/: mod.rs  system_info_service.rs
scripts/: setup-ember.ps1
