[workspace]
resolver = "2"
members = [
  "crates/ember-core",
  "crates/ember-extensions/ember-macros",
  "crates/ember-extensions/ember-logging",
  "crates/ember-cli",
  "crates/ember-extensions/ember-ext-health",
  "crates/ember-extensions/ember-ext-http",
  "crates/ember-extensions/ember-ext-runtime",
  "crates/ember-extensions/ember-ext-db",
  "crates/ember-extensions/ember-ext-config",
  "crates/ember-extensions/ember-ext-exceptions",
  "crates/ember-extensions/ember-ext-openapi",
  "crates/ember-extensions/ember-ext-metrics",
  "crates/ember-extensions/ember-ext-tracing",
  "crates/ember-extensions/ember-ext-auth",
  "crates/ember-extensions/ember-ext-mq",
  "examples/ember-example-service",
  "examples/bookstore",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.com/ember"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ember-ext-http = { path = "crates/ember-extensions/ember-ext-http" }
ember-ext-exceptions = { path = "crates/ember-extensions/ember-ext-exceptions" }
