[package]
name = "bookstore"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
ember-core = { path = "../../crates/ember-core" }
ember-macros = { path = "../../crates/ember-extensions/ember-macros" }
ember-ext-db = { path = "../../crates/ember-extensions/ember-ext-db" }
ember-ext-config = { path = "../../crates/ember-extensions/ember-ext-config" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
ember-ext-http = { path = "../../crates/ember-extensions/ember-ext-http" }
ember-ext-runtime = { path = "../../crates/ember-extensions/ember-ext-runtime" }
